cluster/apps/external/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: external
spec:
  type: ExternalName
  externalName: "${UNIFI_ADDR}"
  ports:
    - port: 8080
